fix z-index toolbar fixed

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -55,7 +55,7 @@ table.table tr:not(:last-child){
 }
 
 .list__tile {
-    font-size: 12px;
+  font-size: 12px;
 }
 Ï
 .navigation-drawer {
@@ -67,14 +67,18 @@ table.table tr:not(:last-child){
 }
 
 .avatar, .avatar .icon, .avatar img {
-    border-radius: 50%;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+  border-radius: 50%;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 .dropzone {
-    border: 2px solid rgba(0, 94, 182, 0.8);
-    background: rgba(0, 94, 182, 0.1);
-    padding: 0; 
+  border: 2px solid rgba(0, 94, 182, 0.8);
+  background: rgba(0, 94, 182, 0.1);
+  padding: 0;
+}
+
+.toolbar--fixed{
+  z-index: 30;
 }
